syntax = "proto3";

package raft.v1;

option go_package = "./internal/raft/raft_grpc;raft_grpc";

// Raft 日志条目
message LogEntry {
  uint64 index = 1;
  uint64 term  = 2;
  bytes  cmd_data  = 3;  // cmd 的序列化
  uint32 type  = 4;  // storage.LogEntryType 的值
  bytes  conf  = 5;  // ClusterConfigChange 的序列化
}

// AppendEntries RPC 请求
message AppendEntriesRequest {
  uint64 term          = 1;
  string leader_id      = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term  = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

// AppendEntries RPC 响应
message AppendEntriesResponse {
  uint64 term    = 1;
  bool   success = 2;
  string message = 3;
}

// RequestVote RPC 请求
message RequestVoteRequest {
  uint64 term          = 1;
  string candidate_id   = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term  = 4;
}

// RequestVote RPC 响应
message RequestVoteResponse {
  uint64 term         = 1;
  bool   vote_granted = 2;
}

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}